Add POM, add account and expenses pages